# clann

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  flake.nix  result_schema.sql
benches/: bench.rs  configs.json  distance_benches.rs  puffinn_clann_comparison.rs  puffinn_limits_benches.rs  time_benches.rs
benches/distance/: mod.rs
benches/time/: mod.rs
benches/utils/: db_utils.rs  mod.rs
c_api/: c_binder.cpp  c_binder.h
libpuffinn-ffi/: README.md  c_binder.cpp  c_binder.h
libpuffinn/include/puffinn/: collection.hpp  performance.hpp
puffinn/examples/: glove.cpp
puffinn/include/puffinn/: collection.hpp  filterer.hpp  math.hpp  prefixmap.hpp  sorthash.hpp  typedefs.hpp
puffinn/include/puffinn/LshDatatypes/: LshDatatype.hpp
puffinn/include/puffinn/format/: real_vector.hpp
puffinn/include/puffinn/hash/: L2hash.hpp  crosspolytope.hpp  minhash.hpp  simhash.hpp
puffinn/include/puffinn/hash_source/: deserialize.hpp  hash_source.hpp  independent.hpp  pool.hpp  tensor.hpp
puffinn/python/wrapper/: python_wrapper.cpp
puffinn/test/include/: collection_test.hpp  filterer_test.hpp  hash_source_test.hpp  similarity_measure_test.hpp
src/: lib.rs  main.rs  puffinn_bindings.rs  puffinn_index.rs
src/core/: config.rs  errors.rs  gmm.rs  heap.rs  index.rs  mod.rs
src/metricdata/: angulardata.rs  euclideandata.rs  mod.rs
src/puffinn_binds/: mod.rs  puffinn.rs  puffinn_bindings.rs  puffinn_index.rs  puffinn_sys.rs  puffinn_types.rs
src/utils/: metrics.rs  mod.rs
src/utils/metrics/: csv.rs  mod.rs  sqlite.rs
(+1 files in other folders)
