[package]
name = "clann"
version = "0.1.0"
edition = "2021"

[dependencies]
cty = "0.2.2"
libc = "0.2"
ndarray = "0.16.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.9"
tracing = "0.1.41"

[build-dependencies]
bindgen = "0.71.1"
cc = { version = "1.2.7", features = ["parallel"] }
