[package]
name = "clann"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
csv = "1.3.1"
cty = "0.2.2"
env_logger = "0.11.6"
hdf5 = { package = "hdf5-metno", version = "0.9.4", features = ["static"]}
indicatif = "0.17.11"
libc = "0.2"
log = "0.4.25"
ndarray = "0.16.1"
ordered-float = "4.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.9"
rusqlite = { version = "0.33.0", features = ["bundled", "chrono"] }
rand = "0.8.5"

[build-dependencies]
bindgen = "0.71.1"
cc = { version = "1.2.7", features = ["parallel"] }
pkg-config = "0.3.31"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"

[[bench]]
name = "distance_benches"
harness = false

[[bench]]
name = "time_benches"
harness = false

[[bench]]
name = "puffinn_limits_benches"
harness = false

[profile.release]
debug = true
